--- a/pom.xml
+++ b/pom.xml
@@ -35,11 +35,13 @@
 	    	<artifactId>easytest-core</artifactId>
 	    	<version>1.4.0</version>
 		</dependency>
-
 		
-        
-
-
+		<dependency>
+	    	<groupId>com.opencsv</groupId>
+	    	<artifactId>opencsv</artifactId>
+	    	<version>4.2</version>
+		</dependency>
+    
     </dependencies>
 
 
